{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 44,
  "lineage": "a9f34043-b626-86bf-d640-690df0dee735",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "5732",
                "uid": "95b8cac7-ede6-46c7-b4ec-64d42fe8c7a7"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly-EKS",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "jenkins/jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "namespace": "jenkins",
                "resource_version": "5759",
                "uid": "cd056f98-d9a5-49d1-a643-a076be85df5a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.71.161",
                "cluster_ips": [
                  "172.20.71.161"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30889,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "jenkins"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "acd056f98d9a549d1a643a076be85df5-1558788556.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "kubernetes_namespace.jenkins",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly-EKS",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c4250269815f7ed",
            "arn": "arn:aws:ec2:us-east-1:177880501572:elastic-ip/eipalloc-05c4250269815f7ed",
            "association_id": "eipassoc-05d6f0f58ad97491a",
            "domain": "vpc",
            "id": "eipalloc-05c4250269815f7ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00512ea3ae7335378",
            "private_dns": "ip-10-0-2-196.ec2.internal",
            "private_ip": "10.0.2.196",
            "public_dns": "ec2-35-153-44-10.compute-1.amazonaws.com",
            "public_ip": "35.153.44.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:internet-gateway/igw-00807673a028a8add",
            "id": "igw-00807673a028a8add",
            "owner_id": "177880501572",
            "tags": {
              "Name": "project-IGW"
            },
            "tags_all": {
              "Name": "project-IGW"
            },
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c4250269815f7ed",
            "association_id": "eipassoc-05d6f0f58ad97491a",
            "connectivity_type": "public",
            "id": "nat-01482652650a6fd45",
            "network_interface_id": "eni-00512ea3ae7335378",
            "private_ip": "10.0.2.196",
            "public_ip": "35.153.44.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d4df7511ef38c9cc",
            "tags": {
              "Name": "project-NAT"
            },
            "tags_all": {
              "Name": "project-NAT"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:route-table/rtb-0e33368d0a1081d52",
            "id": "rtb-0e33368d0a1081d52",
            "owner_id": "177880501572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01482652650a6fd45",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:route-table/rtb-0ca08a8b9f48756df",
            "id": "rtb-0ca08a8b9f48756df",
            "owner_id": "177880501572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00807673a028a8add",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020ad31c6e1464a6a",
            "route_table_id": "rtb-0e33368d0a1081d52",
            "subnet_id": "subnet-059ab0e5494567ba2"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4d369adc0b52461",
            "route_table_id": "rtb-0e33368d0a1081d52",
            "subnet_id": "subnet-0515682666c3bb94e"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b971dd4f8059849d",
            "route_table_id": "rtb-0ca08a8b9f48756df",
            "subnet_id": "subnet-04871fa83ce988721"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d311ed392186110",
            "route_table_id": "rtb-0ca08a8b9f48756df",
            "subnet_id": "subnet-0d4df7511ef38c9cc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:subnet/subnet-059ab0e5494567ba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059ab0e5494567ba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177880501572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_private_subnet_0"
            },
            "tags_all": {
              "Name": "project_private_subnet_0"
            },
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:subnet/subnet-0515682666c3bb94e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515682666c3bb94e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177880501572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_private_subnet_1"
            },
            "tags_all": {
              "Name": "project_private_subnet_1"
            },
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:subnet/subnet-04871fa83ce988721",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04871fa83ce988721",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177880501572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_public_subnet_0"
            },
            "tags_all": {
              "Name": "project_public_subnet_0"
            },
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:subnet/subnet-0d4df7511ef38c9cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4df7511ef38c9cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177880501572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_public_subnet_1"
            },
            "tags_all": {
              "Name": "project_public_subnet_1"
            },
            "vpc_id": "vpc-0c53e3824bbbe4562"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177880501572:vpc/vpc-0c53e3824bbbe4562",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af424f9ab16df4ef",
            "default_route_table_id": "rtb-0884f5c509dc0349b",
            "default_security_group_id": "sg-099906d725d359b81",
            "dhcp_options_id": "dopt-05a2a51190ef3e164",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c53e3824bbbe4562",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0884f5c509dc0349b",
            "owner_id": "177880501572",
            "tags": {
              "Name": "project-VPC"
            },
            "tags_all": {
              "Name": "project-VPC"
            }
          }
        }
      ]
    }
  ]
}